# prun

./: .gitattributes  .gitignore  .mcp.json  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
.icon_tmp/: regen_icons.py
.icon_tmp/orig_backup/: icon.icns
fixtures/: clean-events.json  scan-events.json
site/: index.html  script.js  styles.css
src/: backend.ts  dom.ts  format.test.ts  format.ts  grouping.test.ts  grouping.ts  main.ts  rules-editor.ts  sample-data.ts  styles.css  types.ts  wire-contract.test.ts
src-tauri/: Cargo.toml  prun-rules.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: clean.rs  cli.rs  commands.rs  diagnostics.rs  fs_util.rs  lib.rs  main.rs  scanner.rs  testsupport.rs
src-tauri/src/rules/: labels.rs  matcher.rs  mod.rs  model.rs  store.rs
src-tauri/src/scan/: caches.rs  mod.rs  project.rs
tasks/: lessons.md  todo.md
