[package]
name = "prun"
version = "0.1.0"
description = "Project artifact cleaner"
authors = ["Tomáš Ondruš"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

# The library is what `tauri::generate_handler!` and the mobile entry point use.
[lib]
name = "prun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
ignore = "0.4"
rayon = "1"
git2 = { version = "0.19", default-features = false }
dirs = "5"
trash = "5"
globset = "0.4"
toml = "0.8"
open = "5"
atomicwrites = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
